# observe-instrument-mcp

./: .gitignore  README.md  pyproject.toml  server.json
.github/workflows/: ci.yml  publish.yml
examples/single-agent/: crewai-example.py  openai-sdk-example.py
observe_instrument_mcp/: __init__.py  __main__.py  claude_client.py  file_utils.py  server.py
observe_instrument_mcp/resources/: SKILL.md
